[Add]Mypage,top

--- a/app/views/chat_messages/_chat_message.html.erb
+++ b/app/views/chat_messages/_chat_message.html.erb
@@ -1,5 +1,17 @@
+<div class="clearfix" style="margin-left: 200px;">
 
+	<div style="float: left;">
+		<div style="margin-top:10px;">
+			<img src="<%= attachment_url(chat_message.user, :image, :fill, 80, 80) %>" style="border-radius:100%">
+		</div>
 
-<div class="message">
-  <p><%= "#{chat_message.user.email}: #{chat_message.message}" %></p>
+		<div style="margin-top:10px; float: left;">
+			<%= "#{chat_message.user.first_name} #{chat_message.user.last_name}" %>
+		</div>
+	</div>
+
+	<div class="clearfix" style="border-radius: 25px; border: 1px black solid; padding: 2px 20px; margin-top: 20px; font-size: 20px; width: 800px; margin-left: 20px; float: left;">
+	  <p><%= "#{chat_message.message}" %></p>
+	</div>
+
 </div>
