--- a/app/views/admin_categories/new.html.erb
+++ b/app/views/admin_categories/new.html.erb
@@ -1,16 +1,20 @@
-カテゴリ追加登録
 
-<%= form_for(@category, url:admin_categories_path ) do |f| %>
+<div style="margin-top: 70px;">
+	<h4>カテゴリ追加登録</h4>
 
-	<h4>カテゴリ名</h4>
-	<%= f.text_field :category_name %>
+	<%= form_for(@category, url:admin_categories_path ) do |f| %>
+
+		<h4>カテゴリ名</h4>
+		<%= f.text_field :category_name %>
+
+		<div>
+			<%= f.submit '登録' %>
+		</div>
+
+	<% end %>
 
 	<div>
-		<%= f.submit '登録' %>
+		<%= link_to "カテゴリ一覧へ" ,admin_categories_path %>
 	</div>
 
-<% end %>
-
-<div>
-	<%= link_to "カテゴリ一覧へ" ,admin_categories_path %>
-</div>s
+</div>
