--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,7 +1,11 @@
-<div>
-  <ul>
-    <% @rooms.each do |room| %>
-      <li><%= link_to "ROOM#{room.id}", chatroom_path(room) %></li>
-    <% end %>
-  </ul>
+
+
+<div style="margin-left: 100px; margin-top: 100px;">
+	<h3>チャットルーム一覧</h3>
+	  <ul style="padding-left: 20px; font-size: 30px;">
+	    <% @rooms.each do |room| %>
+	      <li><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span><%= link_to "ROOM#{room.id}", chatroom_path(room) %></li>
+	      <li>_____<%= room.users.name %></li>
+	    <% end %>
+	  </ul>
 </div>
