--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -1,15 +1,18 @@
-<% unless current_user == user %>
-  <% if current_user.following?(user) %>
-    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
-      <%= hidden_field_tag :follow_id, user.id %>
-      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block', class: 'follow' %>
-    <% end %>
-  <% else %>
-    <%= form_for Relationship.new do |f| %>
-      <%= hidden_field_tag :follow_id, user.id %>
-      <%= hidden_field_tag :user_id, current_user.id %>
 
-      <%= f.submit 'Follow', class: 'btn btn-primary btn-block', class: 'follow' %>
+<div style="width: 1000px; padding: 50px; margin-top: 50px;">
+    <% unless current_user == user %>
+      <% if current_user.following?(user) %>
+        <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+          <%= hidden_field_tag :follow_id, user.id %>
+          <%= f.submit 'いいねを解除する', class: "btn btn-warning btn-block disabled" %>
+        <% end %>
+      <% else %>
+        <%= form_for Relationship.new do |f| %>
+          <%= hidden_field_tag :follow_id, user.id %>
+          <%= hidden_field_tag :user_id, current_user.id %>
+
+          <%= f.submit 'いいね！', class: 'btn btn-primary btn-block'%>
+        <% end %>
+      <% end %>
     <% end %>
-  <% end %>
-<% end %>
+</div>
