--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -1,10 +1,10 @@
 
-<div style="width: 1000px; padding: 50px; margin-top: 50px;">
+<div style="width: 1000px; padding: 50px;">
     <% unless current_user == user %>
       <% if current_user.following?(user) %>
         <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
           <%= hidden_field_tag :follow_id, user.id %>
-          <%= f.submit 'いいねを解除する', class: "btn btn-warning btn-block disabled" %>
+          <%= f.submit 'いいねを解除する...', class: "btn btn-warning btn-block disabled" %>
         <% end %>
       <% else %>
         <%= form_for Relationship.new do |f| %>
