--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -36,7 +36,7 @@
 
 </div>
 
-<div style="text-align: center; width: 100%; background-image: url(<%= image_path("man.jpg") %>); background-position: center; background-size: contain; height: 250px;">
+<div style="text-align: center; width: 100%; background-image: url(<%= image_path("images/man.jpg") %>); background-position: center; background-size: contain; height: 250px;">
 </div>
 
 
