--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
     　<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
-  <body>
+  <body class="clearfix">
     <script src="jquery-4.3.5.min.js"></script>
-      <header  class="clearfix" style="width: 100%; height: 60px; background-color: white; padding-top: 0; margin-top: 0;position: absolute; top: 0;">
+      <header  class="clearfix" style="width: 100%; height: 60px; background-color: white; padding-top: 0; margin-top: 0;position: absolute; top: 0; position: fixed;">
 <!--         <a style="float: left; margin-left: 100px;" href="/"><%= image_tag 'logo.png', size:'100x60' %></a>
  -->
             <a href="/" style="color: black;"><h2 style="font-family: cursive; float: left; padding-left: 50px;">Mano Po</h3></a>
@@ -45,7 +45,7 @@
 <div class="clearfix" style="margin-top: 150px;"></div>
     <div class=clearfix style="box-sizing: border-box;">
       <footer class="clearfix" style="width: 100%; background-color: #c0c0c0; padding: 10px 0; bottom: 0;">
-        <div style="font-size: 12px; padding-left: 180px; color: white; float: left;">
+        <div style="font-size: 12px; padding-left: 250px; color: white; float: left;">
           <h4>Mano po（マノポー）とは</h3>
           <p>Mano po（マノポー）とは、フィリピンで子どもや若者が年長の親戚に会った際に、敬意を払って行う挨拶のことである。<br>
           このサイトがきっかけで、日本でも年上の方々に敬意をもって接する気持ちが今以上に強くなりますように。</p>
