[Fix]to merge aws

--- a/app/views/admin_categories/index.html.erb
+++ b/app/views/admin_categories/index.html.erb
@@ -1,8 +1,11 @@
-カテゴリ一覧
+<div style="margin-top: 70px;">
+	<h4>カテゴリ一覧</h4>
 
-<% @category.each do |category| %>
-	<p><%= category.category_name %>
-	<%= link_to "削除" ,admin_category_path(category) ,method: :delete %></p>
-<% end %>
+	<% @category.each do |category| %>
+		<p><%= category.category_name %>
+		<%= link_to "削除" ,admin_category_path(category) ,method: :delete %></p>
+	<% end %>
 
-<%= link_to "カテゴリを追加" ,"admin_categories/new" %>
+	<%= link_to "カテゴリを追加" ,"admin_categories/new" %>
+
+</div>
