--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -5,7 +5,7 @@
 	  <ul style="padding-left: 20px; font-size: 30px;">
 	    <% @rooms.each do |room| %>
 	      <li><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span><%= link_to "ROOM#{room.id}", chatroom_path(room) %></li>
-	      <li>_____<%= room.users.name %></li>
+	      <li>　　<%= room.users.where.not(id:current_user.id).pluck(:first_name)[0] %>さんとのチャットルーム</li>
 	    <% end %>
 	  </ul>
 </div>
