--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,14 @@
             <a href="/" style="color: black;"><h2 style="font-family: cursive; float: left; padding-left: 50px;">Mano Po</h3></a>
           <% if user_signed_in? %>
                 <ul class="clearfix" style="margin-top: 30px; float: left;">
-                        <li style="list-style: none; float: left; margin-left: 800px;">
-                          <%= link_to "　マイページ", user_path(current_user.id), class: "glyphicon glyphicon-home , text-muted" %></li>
+                        <li style="list-style: none; float: left; margin-left: 750px;">
+                          <%= link_to "　トップ", users_path, class: "glyphicon glyphicon-home , text-muted" %></li>
+                        <li style="list-style: none; float: left; margin-left: 20px;">
+                          <%= link_to "　マイページ", user_path(current_user.id), class: "glyphicon glyphicon-user , text-muted" %></li>
+                        <li style="list-style: none; float: left; margin-left: 20px;">
+                          <%= link_to "　チャット", chatrooms_path, class: "glyphicon glyphicon-comment , text-muted" %></li>
                         <li style="list-style: none; float: left; margin-left: 20px;">
                           <%= link_to "　ログアウト", destroy_user_session_path, :method => :delete, class: "glyphicon glyphicon-log-out , text-muted" %></li>
-                        <li style="list-style: none; float: left; margin-left: 20px;">
-                          <%= link_to "　チャット", chatrooms_path, class: "glyphicon glyphicon-user , text-muted" %></li>
                 </ul>
 
 
@@ -51,7 +53,7 @@
           このサイトがきっかけで、日本でも年上の方々に敬意をもって接する気持ちが今以上に強くなりますように。</p>
         </div>
         <div style="float: left; margin-left: 150px; margin-top: 50px; color: white;">
-          <p>© All rights reserved by Infratop.Inc.</p>
+          <p>© All rights reserved by ManoPo.Inc.</p>
         </div>
       </footer>
     </div>
