--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -64,7 +64,7 @@
 	            <% end %>
 	          </div>
 	      </li>
-	  </a>
+	    </a>
 	    <% end %>
 	    </ul>
   </div>
@@ -82,10 +82,11 @@
     </div>
 	    <ul class="row">
 	    <% @chatroom_with_follower.each do |chatuser| %>
+	    <a href="<%= user_path(chatuser[:follower_user]) %>">
 	      <li class="col-12 col-md-6 col-lg-3" style="position: static;">
 	          <div class="cnt-block equal-hight" style="height: 349px;">
 	            <figure><img src="<%= attachment_url(chatuser[:follower_user], :image, :fill, 600, 600) %>"></figure>
-	            <h3><a href="<%= user_path(chatuser[:follower_user]) %>"><%= chatuser[:follower_user].first_name %> <%= chatuser[:follower_user].last_name %></a></h3>
+	            <h3><%= chatuser[:follower_user].first_name %> <%= chatuser[:follower_user].last_name %></h3>
 
         		<% if current_user.age_group == '若者' %>
 		            <h5>保有スキル</h5>
@@ -101,9 +102,11 @@
 	            <% else %>
 	            	<h5> </h5>
 	            <% end %>
-   	            <p><a href="<%= chatroom_path(chatuser[:chatroom_id]) %>">チャットをする</a></p>
+
+   	            <object><p><a href="<%= chatroom_path(chatuser[:chatroom_id]) %>" style="color: orange;">チャットをする</a></p></object>
 	          </div>
 	      </li>
+	    </a>
 	    <% end %>
 	    </ul>
   </div>
