--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,13 +45,24 @@
 
 	<% if @user == current_user %>
 	    <div class="clearfix">
-	    	<h3>あなたがいいねしたユーザー</h3>
-	    	<% @user.followers.each do |f| %>
-	    	<div class="clearfix" style="float: left; padding-left: 10px; margin-top: 20px;">
-	    		<a href="<%= user_path(f.id) %>">
-	    		<img src="<%= attachment_url(f, :image, :fill, 100, 100) %>" style="border-radius: 100px;"></a>
-	    		<p><%= f.first_name %> <%= f.last_name %>さん</p>
-	    	</div>
+	    	<h3><span class="glyphicon glyphicon-user" aria-hidden="true"></span>　あなたがいいねしたユーザー</h3>
+	    	<% @following.each do |f| %>
+		    	<div class="clearfix" style="float: left; padding-left: 10px; margin-top: 20px;">
+		    		<a href="<%= user_path(f.id) %>">
+		    		<img src="<%= attachment_url(f.follow, :image, :fill, 100, 100) %>" style="border-radius: 100px;"></a>
+		    		<p><%= f.follow.first_name %> <%= f.follow.last_name %>さん</p>
+		    	</div>
+	    	<% end %>
+	    </div>
+
+	    <div class="clearfix" style="margin-top: 40px;">
+	    	<h3><span class="glyphicon glyphicon-user" aria-hidden="true"></span>　あなたをいいねしているユーザー</h3>
+	    	<% @follow_user.each do |fu| %>
+		    	<div class="clearfix" style="float: left; padding-left: 10px; margin-top: 20px;">
+		    		<a href="<%= user_path(fu.id) %>">
+		    		<img src="<%= attachment_url(fu.user, :image, :fill, 100, 100) %>" style="border-radius: 100px;"></a>
+		    		<p><%= fu.user.first_name %> <%= fu.user.last_name %>さん</p>
+		    	</div>
 	    	<% end %>
 	    </div>
 
